--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <p>Touch me.</p>
         <canvas id="myCanvas"></canvas>
-        <button id="bubble-btn">Bubble</button>
     </body>
 </html>
